--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -11,4 +11,5 @@ proc-macro-hack = "0.5.8"
 
 [dev-dependencies]
 tokio = "=0.2.0-alpha.1"
+tokio-test = "=0.2.0-alpha.1"
 futures-util-preview = "=0.3.0-alpha.17"
