handle edge cases

--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -13,3 +13,4 @@ proc-macro-hack = "0.5.8"
 tokio = "=0.2.0-alpha.1"
 tokio-test = "=0.2.0-alpha.1"
 futures-util-preview = "=0.3.0-alpha.17"
+trybuild = "1.0"
