--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -1,8 +1,23 @@
 [package]
 name = "async-stream"
+# When releasing to crates.io:
+# - Update version number
+#   - lib.rs: html_root_url.
+#   - README.md
+# - Update CHANGELOG.md
+# - Update doc URL.
+#   - Cargo.toml
+#   - README.md
+# - Create git tag
 version = "0.1.0"
-authors = ["Carl Lerche <me@carllerche.com>"]
 edition = "2018"
+license = "MIT"
+authors = ["Carl Lerche <me@carllerche.com>"]
+description = "Asynchronous streams using async & await notation"
+documentation = "https://docs.rs/async-stream/0.1.0/loom"
+homepage = "https://github.com/tokio-rs/async-stream"
+repository = "https://github.com/tokio-rs/async-stream"
+readme = "README.md"
 
 [dependencies]
 async-stream-impl = { path = "../async-stream-impl" }
