--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -20,7 +20,7 @@ repository = "https://github.com/tokio-rs/async-stream"
 readme = "README.md"
 
 [dependencies]
-async-stream-impl = { version = "0.1.0" }
+async-stream-impl = { version = "0.1.0", path = "../async-stream-impl" }
 futures-core-preview = "=0.3.0-alpha.18"
 
 [dev-dependencies]
