Update futures-rs to 0.3.0

--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -21,10 +21,10 @@ readme = "README.md"
 
 [dependencies]
 async-stream-impl = { version = "0.1.1", path = "../async-stream-impl" }
-futures-core-preview = "=0.3.0-alpha.19"
+futures-core = "0.3.0"
 
 [dev-dependencies]
 tokio = "=0.2.0-alpha.6"
 tokio-test = "=0.2.0-alpha.6"
-futures-util-preview = "=0.3.0-alpha.19"
+futures-util = "0.3.0"
 trybuild = "1.0"
