Fix cargo `documentation` urls

--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2018"
 license = "MIT"
 authors = ["Carl Lerche <me@carllerche.com>"]
 description = "Asynchronous streams using async & await notation"
-documentation = "https://docs.rs/async-stream/0.3.0/async-stream"
+documentation = "https://docs.rs/async-stream/0.3.0/async_stream"
 homepage = "https://github.com/tokio-rs/async-stream"
 repository = "https://github.com/tokio-rs/async-stream"
 readme = "README.md"
