--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -25,6 +25,7 @@ futures-core = "0.3"
 
 [dev-dependencies]
 futures-util = "0.3"
+futures-executor = "0.3.8"
 tokio = { version = "1", features = ["full"] }
 tokio-test = "0.4"
 trybuild = "1"
