--- a/async-stream-impl/Cargo.toml
+++ b/async-stream-impl/Cargo.toml
@@ -14,7 +14,7 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1"
-syn = { version = "1", features = ["extra-traits", "full", "visit-mut"]}
+syn = { version = "1", features = ["full", "visit-mut"] }
 quote = "1"
 
 [dev-dependencies]
