--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -2,25 +2,21 @@
 name = "async-stream"
 # When releasing to crates.io:
 # - Update version number
-#   - lib.rs: html_root_url.
 #   - README.md
 # - Update CHANGELOG.md
-# - Update doc URL.
-#   - Cargo.toml
-#   - README.md
 # - Create git tag
-version = "0.3.1"
+version = "0.3.2"
 edition = "2018"
 license = "MIT"
 authors = ["Carl Lerche <me@carllerche.com>"]
 description = "Asynchronous streams using async & await notation"
-documentation = "https://docs.rs/async-stream/0.3"
+documentation = "https://docs.rs/async-stream"
 homepage = "https://github.com/tokio-rs/async-stream"
 repository = "https://github.com/tokio-rs/async-stream"
 readme = "README.md"
 
 [dependencies]
-async-stream-impl = { version = "=0.3.1", path = "../async-stream-impl" }
+async-stream-impl = { version = "=0.3.2", path = "../async-stream-impl" }
 futures-core = "0.3"
 
 [dev-dependencies]
