--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -21,6 +21,7 @@ futures-core = "0.3"
 
 [dev-dependencies]
 futures-util = "0.3"
+rustversion = "1"
 tokio = { version = "1", features = ["full"] }
 tokio-test = "0.4"
 trybuild = "1"
