--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install Rust
         run: rustup update stable
+      - run: rustup component add rust-src
       - run: cargo test --all-features
 
   minrust:
