--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - master
+  schedule:
+    - cron: '0 2 * * *'
 
 env:
   RUSTFLAGS: -Dwarnings
@@ -23,6 +25,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install Rust
         run: rustup update stable
+      - run: rustup component add rust-src
       - run: cargo test --all-features
 
   minrust:
