Add rust-version field to Cargo.toml
https://doc.rust-lang.org/cargo/reference/manifest.html#the-rust-version-field

--- a/async-stream-impl/Cargo.toml
+++ b/async-stream-impl/Cargo.toml
@@ -2,6 +2,7 @@
 name = "async-stream-impl"
 version = "0.3.2"
 edition = "2018"
+rust-version = "1.45"
 license = "MIT"
 authors = ["Carl Lerche <me@carllerche.com>"]
 description = "proc macros for async-stream crate"
