--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
   RUST_BACKTRACE: 1
   # This is the minimum supported Rust version of this crate.
   # When updating this, the reminder to update the minimum supported
-  # Rust version in README.md and .clippy.toml.
+  # Rust version in README.md, Cargo.toml, and .clippy.toml.
   minrust: 1.45.2
 
 jobs:
