--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -5,6 +5,7 @@ name = "async-stream"
 # - Create git tag
 version = "0.3.2"
 edition = "2018"
+rust-version = "1.45"
 license = "MIT"
 authors = ["Carl Lerche <me@carllerche.com>"]
 description = "Asynchronous streams using async & await notation"
