--- a/async-stream-impl/Cargo.toml
+++ b/async-stream-impl/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "async-stream-impl"
-version = "0.3.2"
+version = "0.3.3"
 edition = "2018"
+rust-version = "1.45"
 license = "MIT"
 authors = ["Carl Lerche <me@carllerche.com>"]
 description = "proc macros for async-stream crate"
-documentation = "https://docs.rs/async-stream-impl"
-homepage = "https://github.com/tokio-rs/async-stream"
 repository = "https://github.com/tokio-rs/async-stream"
 
 [lib]
