--- a/async-stream/Cargo.toml
+++ b/async-stream/Cargo.toml
@@ -1,22 +1,18 @@
 [package]
 name = "async-stream"
 # When releasing to crates.io:
-# - Update version number
-#   - README.md
 # - Update CHANGELOG.md
 # - Create git tag
-version = "0.3.2"
+version = "0.3.3"
 edition = "2018"
+rust-version = "1.45"
 license = "MIT"
 authors = ["Carl Lerche <me@carllerche.com>"]
 description = "Asynchronous streams using async & await notation"
-documentation = "https://docs.rs/async-stream"
-homepage = "https://github.com/tokio-rs/async-stream"
 repository = "https://github.com/tokio-rs/async-stream"
-readme = "README.md"
 
 [dependencies]
-async-stream-impl = { version = "=0.3.2", path = "../async-stream-impl" }
+async-stream-impl = { version = "=0.3.3", path = "../async-stream-impl" }
 futures-core = "0.3"
 
 [dev-dependencies]
