--- a/async-stream/tests/reexporter/Cargo.toml
+++ b/async-stream/tests/reexporter/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 publish = false
 
 [dependencies]
-async-stream = { path = "../.." }
+async-stream = { path = "../..", features = ["macro"] }
