Fix CI failure on 1.45
```
error: failed to get `futures-core` as a dependency of package `async-stream v0.3.3 (/home/runner/work/async-stream/async-stream/async-stream)`

Caused by:
  failed to load source for dependency `futures-core`

Caused by:
  Unable to update registry `https://github.com/rust-lang/crates.io-index`

Caused by:
  failed to fetch `https://github.com/rust-lang/crates.io-index`

Caused by:
  error reading from the zlib stream; class=Zlib (5)
```

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
       - run: cargo test --all-features
 
   minrust:
+    env:
+      CARGO_NET_GIT_FETCH_WITH_CLI: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
