--- a/async-stream-impl/Cargo.toml
+++ b/async-stream-impl/Cargo.toml
@@ -13,7 +13,7 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1"
-syn = { version = "2.0.2", features = ["full", "parsing", "visit-mut"] }
+syn = { version = "2.0.2", features = ["full", "visit-mut"] }
 quote = "1"
 
 [dev-dependencies]
